--- a/index.html
+++ b/index.html
@@ -22,13 +22,12 @@
             <input id="search-bar" type="text" class="search-bar" placeholder="  Search Movie" />
             <button id="btn-search" class="btn-search">Search</button>
         </form>
-        <button onclick="myFunction(this)"></button>
         <main id="movie-list">
             <img src="icons/empty-search-icon.png" id="start-icon" />
             <h1 id="start-info">Start exploring</h1>
         </main>
         
     </body>
-    <script type="module" src="./index.js"></script>
+    <script src="./index.js"></script>
  
 </html>
