--- a/mywatchlist.html
+++ b/mywatchlist.html
@@ -12,16 +12,18 @@
     <body>
         <nav>
             <div class="nav-header">
-                <h1>Find your film</h1>
+                <h1>Your Watchlist</h1>
                 <h3><a href="./index.html" id="nav-next">Back to Search</a></h3>
             </div>
         </nav>
 
+        <button id="btn-clear-all" class="css-button-shadow-border--sand">Clear all</button>
 
         <main id="movie-list">
-            <img src = "icons/empty-search-icon.png" id="start-icon">
-            <h1 id="start-info">Your Watchlist</h1>
+            <img src="icons/empty-search-icon.png" id="start-icon" />
+            <h1 id="start-info" class="start-info">Your Watchlist</h1>
         </main>
-        <script type="module" src="/index.js"></script>
+
+        <script src="./watchListIndex.js"></script>
     </body>
 </html>
